--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,7 @@ body {
     padding: 20px;
 }
 
-.heading{
-    display: block;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: #C82119;
-    border-radius: 0.5em;
-    margin: 2em;
-    padding: 1em;
-}
+
 
 header h1 {
     text-align: center;
@@ -43,7 +34,7 @@ h2 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #fff;
+    color: #000;
     font-size: 2rem;
     margin-bottom: 20px;
 }
@@ -63,7 +54,7 @@ input, textarea, select, button {
     font-size: 1rem;
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid #000;
+    border: 2px solid #00000053;
     outline: none;
     width: 100%;
     box-sizing: border-box;
