--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Inter";
+    background-color: #f8f1e5;
     color: #333;
     padding: 20px;
 }
@@ -14,9 +15,10 @@ body {
 
 
 header h1 {
+    font-weight: 800;
     text-align: center;
     font-size: 3rem;
-    color: #000;
+    color: #57966f;
     margin-bottom: 20px;
 }
 
@@ -34,7 +36,7 @@ h2 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #000;
+    color: #4f4a50;
     font-size: 2rem;
     margin-bottom: 20px;
 }
